<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_development"
            android:icon="@drawable/ic_menu_development"
            android:title="@string/menu_development_title" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_menu_game"
            android:title="@string/menu_game_title" />
        <item
            android:id="@+id/nav_secure"
            android:icon="@drawable/ic_menu_secure"
            android:title="@string/menu_secure_title" />
        <item
            android:id="@+id/nav_mobil"
            android:icon="@drawable/ic_menu_mobile"
            android:title="@string/menu_mobil_title" />

    </group>

    <item android:title="@string/menugroup_help_title">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_send_title" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/menu_about_title" />
            <item
                android:id="@+id/nav_source"
                android:icon="@drawable/ic_menu_github"
                android:title="@string/menu_github_title" />
        </menu>
    </item>

</menu>
